fix: use carbon spacing tokens

--- a/packages/experimental/src/components/Tearsheet/_tearsheet.scss
+++ b/packages/experimental/src/components/Tearsheet/_tearsheet.scss
@@ -12,17 +12,17 @@
 
 .#{$exp-prefix}-tearsheet-shell-container {
   height: 100%;
-  max-height: calc(100% - 48px);
+  max-height: calc(100% - #{$spacing-09});
   // stylelint-disable-next-line carbon/layout-token-use
   transform: translate3d(0, 500px, 0);
 }
 
 .#{$exp-prefix}-tearsheet-shell-container--lower {
-  max-height: calc(100% - 88px);
+  max-height: calc(100% - ( #{$spacing-09} + #{$spacing-08} ));
 }
 
 .#{$exp-prefix}-tearsheet-shell-container--wide {
-  width: calc(100% - 64px);
+  width: calc(100% - ( 2 * #{$spacing-07} ));
 }
 
 .#{$exp-prefix}-tearsheet-shell {
